Statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-app
  namespace: test
spec:
  serviceName: "redis-service"
  replicas: 3
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - name: redis-container
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: test-pvc
          mountPath: /usr/share/html
  volumeClaimTemplates:
  - metadata:
      name: test-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
