daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test-daemonset
  namespace: test
  labels:
    app: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: nginx:latest
        ports:
        - containerPort: 80
