Dis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: discovery-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: discovery-namespace
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: steeltoeoss/eureka-server:latest
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: discovery-namespace
spec:
  selector:
    app: eureka
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8761
  type: NodePort
