network.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-namespace
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network-namespace
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: network-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network-namespace
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: network-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: network-namespace
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
## kubectl exec -n network-namespace backend -- curl -I --connect-timeout 5 10.110.171.16
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network-namespace
  name: test-frontend
  labels:
    app: test-frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-frontend
  namespace: network-namespace
spec:
  selector:
    app: test-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
